--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.dkhenry</groupId>
 	<artifactId>rethinkjava</artifactId>
-	<version>0.11-SNAPSHOT</version>
+	<version>0.11</version>
 	<packaging>jar</packaging>
 
 	<name>rethinkjava</name>
