--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.dkhenry</groupId>
 	<artifactId>rethinkjava</artifactId>
-	<version>0.11</version>
+	<version>0.12</version>
 	<packaging>jar</packaging>
 
 	<name>rethinkjava</name>
@@ -49,7 +49,7 @@
 			<plugin>
 				<groupId>com.google.protobuf.tools</groupId>
 				<artifactId>maven-protoc-plugin</artifactId>
-				<version>0.3.2</version>
+				<version>0.4.4</version>
 				<configuration>
 					<checkStaleness>true</checkStaleness>
 					<protocExecutable>/usr/bin/protoc</protocExecutable>
@@ -114,7 +114,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.2.201409121644</version>
+				<version>0.7.5.201505241946</version>
 				<configuration>
 				</configuration>
 				<executions>
@@ -145,10 +145,21 @@
 		</plugins>
 	</build>
 	<pluginRepositories>
-		<pluginRepository>
-			<id>protoc-plugin</id>
-			<url>http://sergei-ivanov.github.com/maven-protoc-plugin/repo/releases/</url>
-		</pluginRepository>
+	    <pluginRepository>
+	        <releases>
+	            <updatePolicy>never</updatePolicy>
+	        </releases>
+	        <snapshots>
+	            <enabled>false</enabled>
+	        </snapshots>
+	        <id>central</id>
+	        <name>Central Repository</name>
+	        <url>https://repo.maven.apache.org/maven2</url>
+	    </pluginRepository>
+	    <pluginRepository>
+	        <id>protoc-plugin</id>
+	        <url>https://dl.bintray.com/sergei-ivanov/maven/</url>
+	    </pluginRepository>
 	</pluginRepositories>
 	<dependencies>
 		<dependency>
@@ -162,6 +173,11 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20151123</version>
+		</dependency>		
 	</dependencies>
 	<description>Java bindings for rethinkdb</description>
 	<scm>
